// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeatmapPlot Does not display hidden cell sets 1`] = `
Array [
  "1",
  "2",
  "3",
  "4",
  "5",
  "6",
  "7",
  "8",
  "9",
  "10",
  "11",
  "12",
  "16",
  "17",
  "18",
  "19",
  "20",
  "21",
  "22",
  "23",
  "24",
  "25",
  "26",
  "27",
  "28",
  "29",
  "30",
  "31",
  "32",
  "33",
  "34",
  "35",
  "36",
  "37",
  "38",
  "39",
  "40",
  "41",
  "42",
  "43",
  "47",
  "48",
  "49",
  "50",
  "51",
  "52",
  "53",
  "54",
  "55",
  "57",
  "58",
  "59",
  "60",
  "66",
  "68",
  "69",
  "70",
  "71",
  "72",
  "73",
  "75",
  "76",
  "77",
  "79",
  "80",
  "81",
  "82",
  "84",
  "85",
  "88",
  "89",
  "90",
  "91",
  "92",
  "93",
  "94",
  "95",
  "96",
  "97",
  "98",
  "99",
  "100",
]
`;

exports[`HeatmapPlot Does not display hidden cell sets 2`] = `
Array [
  "Ms4a4b",
  "Smc4",
  "Ccr7",
  "Ifi27l2a",
  "Gm8369",
  "S100a4",
  "S100a6",
  "Tmem176a",
  "Tmem176b",
  "Cxcr6",
  "5830411N06Rik",
  "Lmo4",
  "Il18r1",
  "Atp2b1",
  "Pde5a",
  "Ccl5",
  "Nkg7",
  "Klrd1",
  "AW112010",
  "Klrc1",
  "Gzma",
  "Stmn1",
  "Hmgn2",
  "Pclaf",
  "Tuba1b",
  "Lyz2",
  "Ifitm3",
  "Fcer1g",
  "Tyrobp",
  "Cst3",
  "Cd74",
  "Igkc",
  "Cd79a",
  "H2-Ab1",
  "H2-Eb1",
]
`;

exports[`HeatmapPlot Does not display hidden cell sets 3`] = `
Array [
  "1",
  "2",
  "3",
  "4",
  "5",
  "6",
  "7",
  "8",
  "9",
  "10",
  "11",
  "12",
  "16",
  "17",
  "18",
  "19",
  "20",
  "21",
  "22",
  "23",
  "24",
  "25",
  "26",
  "27",
  "28",
  "29",
  "30",
  "31",
  "32",
  "33",
  "34",
  "35",
  "36",
  "37",
  "38",
  "39",
  "40",
  "41",
  "42",
  "43",
  "47",
  "48",
  "49",
  "50",
  "51",
  "52",
  "53",
  "54",
  "55",
  "57",
  "58",
  "59",
  "60",
  "61",
  "62",
  "64",
  "65",
  "66",
  "68",
  "69",
  "70",
  "71",
  "72",
  "73",
  "75",
  "76",
  "77",
  "79",
  "80",
  "81",
  "82",
  "84",
  "85",
  "88",
  "89",
  "90",
  "91",
  "92",
  "93",
  "94",
  "95",
  "96",
  "97",
  "98",
  "99",
  "100",
]
`;

exports[`HeatmapPlot Does not display hidden cell sets 4`] = `
Array [
  "Ms4a4b",
  "Smc4",
  "Ccr7",
  "Ifi27l2a",
  "Gm8369",
  "S100a4",
  "S100a6",
  "Tmem176a",
  "Tmem176b",
  "Cxcr6",
  "5830411N06Rik",
  "Lmo4",
  "Il18r1",
  "Atp2b1",
  "Pde5a",
  "Ccl5",
  "Nkg7",
  "Klrd1",
  "AW112010",
  "Klrc1",
  "Gzma",
  "Stmn1",
  "Hmgn2",
  "Pclaf",
  "Tuba1b",
  "Lyz2",
  "Ifitm3",
  "Fcer1g",
  "Tyrobp",
  "Cst3",
  "Cd74",
  "Igkc",
  "Cd79a",
  "H2-Ab1",
  "H2-Eb1",
]
`;

exports[`HeatmapPlot Reacts to cellClass groupby being changed 1`] = `
Array [
  "1",
  "2",
  "3",
  "4",
  "5",
  "6",
  "7",
  "8",
  "9",
  "10",
  "11",
  "12",
  "16",
  "17",
  "18",
  "19",
  "20",
  "21",
  "22",
  "23",
  "24",
  "25",
  "26",
  "27",
  "28",
  "29",
  "30",
  "31",
  "32",
  "33",
  "34",
  "35",
  "36",
  "37",
  "38",
  "39",
  "40",
  "41",
  "42",
  "43",
  "47",
  "48",
  "49",
  "50",
  "51",
  "52",
  "53",
  "54",
  "55",
  "57",
  "58",
  "59",
  "60",
  "61",
  "62",
  "64",
  "65",
  "66",
  "68",
  "69",
  "70",
  "71",
  "72",
  "73",
  "75",
  "76",
  "77",
  "79",
  "80",
  "81",
  "82",
  "84",
  "85",
  "88",
  "89",
  "90",
  "91",
  "92",
  "93",
  "94",
  "95",
  "96",
  "97",
  "98",
  "99",
  "100",
]
`;

exports[`HeatmapPlot Reacts to cellClass groupby being changed 2`] = `
Array [
  "Ms4a4b",
  "Smc4",
  "Ccr7",
  "Ifi27l2a",
  "Gm8369",
  "S100a4",
  "S100a6",
  "Tmem176a",
  "Tmem176b",
  "Cxcr6",
  "5830411N06Rik",
  "Lmo4",
  "Il18r1",
  "Atp2b1",
  "Pde5a",
  "Ccl5",
  "Nkg7",
  "Klrd1",
  "AW112010",
  "Klrc1",
  "Gzma",
  "Stmn1",
  "Hmgn2",
  "Pclaf",
  "Tuba1b",
  "Lyz2",
  "Ifitm3",
  "Fcer1g",
  "Tyrobp",
  "Cst3",
  "Cd74",
  "Igkc",
  "Cd79a",
  "H2-Ab1",
  "H2-Eb1",
]
`;

exports[`HeatmapPlot Renders the heatmap component by default if everything loads 1`] = `
Array [
  "1",
  "2",
  "3",
  "4",
  "5",
  "6",
  "7",
  "8",
  "9",
  "10",
  "11",
  "12",
  "16",
  "17",
  "18",
  "19",
  "20",
  "21",
  "22",
  "23",
  "24",
  "25",
  "26",
  "27",
  "28",
  "29",
  "30",
  "31",
  "32",
  "33",
  "34",
  "35",
  "36",
  "37",
  "38",
  "39",
  "40",
  "41",
  "42",
  "43",
  "47",
  "48",
  "49",
  "50",
  "51",
  "52",
  "53",
  "54",
  "55",
  "57",
  "58",
  "59",
  "60",
  "61",
  "62",
  "64",
  "65",
  "66",
  "68",
  "69",
  "70",
  "71",
  "72",
  "73",
  "75",
  "76",
  "77",
  "79",
  "80",
  "81",
  "82",
  "84",
  "85",
  "88",
  "89",
  "90",
  "91",
  "92",
  "93",
  "94",
  "95",
  "96",
  "97",
  "98",
  "99",
  "100",
]
`;

exports[`HeatmapPlot Renders the heatmap component by default if everything loads 2`] = `
Array [
  "Ms4a4b",
  "Smc4",
  "Ccr7",
  "Ifi27l2a",
  "Gm8369",
  "S100a4",
  "S100a6",
  "Tmem176a",
  "Tmem176b",
  "Cxcr6",
  "5830411N06Rik",
  "Lmo4",
  "Il18r1",
  "Atp2b1",
  "Pde5a",
  "Ccl5",
  "Nkg7",
  "Klrd1",
  "AW112010",
  "Klrc1",
  "Gzma",
  "Stmn1",
  "Hmgn2",
  "Pclaf",
  "Tuba1b",
  "Lyz2",
  "Ifitm3",
  "Fcer1g",
  "Tyrobp",
  "Cst3",
  "Cd74",
  "Igkc",
  "Cd79a",
  "H2-Ab1",
  "H2-Eb1",
]
`;

exports[`HeatmapPlot Responds correctly to vitessce Heatmap callbacks 1`] = `
Array [
  "1",
  "2",
  "3",
  "4",
  "5",
  "6",
  "7",
  "8",
  "9",
  "10",
  "11",
  "12",
  "16",
  "17",
  "18",
  "19",
  "20",
  "21",
  "22",
  "23",
  "24",
  "25",
  "26",
  "27",
  "28",
  "29",
  "30",
  "31",
  "32",
  "33",
  "34",
  "35",
  "36",
  "37",
  "38",
  "39",
  "40",
  "41",
  "42",
  "43",
  "47",
  "48",
  "49",
  "50",
  "51",
  "52",
  "53",
  "54",
  "55",
  "57",
  "58",
  "59",
  "60",
  "61",
  "62",
  "64",
  "65",
  "66",
  "68",
  "69",
  "70",
  "71",
  "72",
  "73",
  "75",
  "76",
  "77",
  "79",
  "80",
  "81",
  "82",
  "84",
  "85",
  "88",
  "89",
  "90",
  "91",
  "92",
  "93",
  "94",
  "95",
  "96",
  "97",
  "98",
  "99",
  "100",
]
`;

exports[`HeatmapPlot Responds correctly to vitessce Heatmap callbacks 2`] = `
Array [
  "Ms4a4b",
  "Smc4",
  "Ccr7",
  "Ifi27l2a",
  "Gm8369",
  "S100a4",
  "S100a6",
  "Tmem176a",
  "Tmem176b",
  "Cxcr6",
  "5830411N06Rik",
  "Lmo4",
  "Il18r1",
  "Atp2b1",
  "Pde5a",
  "Ccl5",
  "Nkg7",
  "Klrd1",
  "AW112010",
  "Klrc1",
  "Gzma",
  "Stmn1",
  "Hmgn2",
  "Pclaf",
  "Tuba1b",
  "Lyz2",
  "Ifitm3",
  "Fcer1g",
  "Tyrobp",
  "Cst3",
  "Cd74",
  "Igkc",
  "Cd79a",
  "H2-Ab1",
  "H2-Eb1",
]
`;
